# work_14.1

./: .gitignore  README.md  coverage.html  index_htmlcov.html  main.py  pyproject.toml  requirements.txt
src/: baseproduct.py  category.py  lawngrass.py  poduct_mixin.py  product.py  smartphone.py
tests/: conftest.py  test_classes.py
